implementing advertisement
